tests/negative/scope/import-current-package/test.smol
package testing;

import testing;

class Test {
	fn main() Unit {

	}
}